feat: update base path in astro.config.mjs and adjust workspace settings
Signed-off-by: astromarb <marvinlopezacevedo.personal@gmail.com>

--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -1,4 +1,4 @@
-name: Astro deployt to GitHub Pages
+name: Astro deploy to GitHub Pages
 
 on:
   # Trigger the workflow every time you push to the `main` branch
