feat: update .gitignore and tsconfig.json for improved path references
Signed-off-by: astromarb <marvinlopezacevedo.personal@gmail.com>

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "extends": "astro/tsconfigs/strict",
   "include": [
-    "ecliptic-equator/.astro/types.d.ts", "**/*"],
+    ".astro/types.d.ts", "**/*"],
   "exclude": ["dist"]
 }
